[tool.poetry]
name = "candidate-portal"
version = "0.1.0"
description = "Candidate Portal Web App"
authors = ["spin14 <acci.valverde@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"
gunicorn = "^20.0"
requests = "^2.22.0"
boto3 = "^1.11"
psycopg2 = "^2.8.5"
sentry-sdk = "^0.14.4"

[tool.poetry.dev-dependencies]
mypy = "^0.761.0"
flake8 = "^3.7"
isort = "^4.3"
ipdb = "^0.12.3"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
locust = "^1.0.1"

[tool.black]
line-length = 119
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
